--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -5,6 +5,9 @@
     - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5000
+        token: "{{ token }}"
+
+# https://github.com/ansible/event-driven-ansible/blob/main/extensions/eda/plugins/event_source/webhook.py
 
   rules:
     - name: Say Hello
