--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -8,7 +8,7 @@
         port: 5000
   rules:
     - name: Say Hello
-      condition: event.payload
+      #condition: event.payload
       action:
         debug:
           msg: something happened in Dynatrace
