--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -3,9 +3,11 @@
   hosts: all
   sources:
     # https://github.com/ansible/event-driven-ansible/blob/main/extensions/eda/plugins/event_source/webhook.py
+    # https://github.com/Dynatrace/Dynatrace-EventDrivenAnsible/blob/main/rulebooks/dt_webhook_event_example_rule.yml
     - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5000
+        token: "{{ token }}"
   rules:
     - name: Say Hello
       condition: event
