--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -17,9 +17,10 @@
 
     - name: Run an AAP job
       condition: 1 == 1
-      run_job_template:
-        name: [EDA] reacting to a webhook event
-        organization: Default
-        job_args:
-          extra_vars:
-            payload: "{{ event.payload }}"
+      action:
+        run_job_template:
+          name: [EDA] reacting to a webhook event
+          organization: Default
+          job_args:
+            extra_vars:
+              payload: "{{ event.payload }}"
