--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -19,7 +19,7 @@
       condition: 1 == 1
       action:
         run_job_template:
-          name: [EDA] reacting to a webhook event
+          name: "[EDA] reacting to a webhook event"
           organization: Default
           job_args:
             extra_vars:
