--- a/rulebooks/rulebook-webhook.yml
+++ b/rulebooks/rulebook-webhook.yml
@@ -23,7 +23,7 @@
           job_args:
             extra_vars:
               payload: "{{ event.payload }}"
-      - debug:
-          var: event.payload
-      - debug:
-          msg: https://github.com/sebw/aap-eda-dynatrace/edit/main/rulebooks/rulebook-webhook.yml
+#      - debug:
+#          var: event.payload
+#      - debug:
+#          msg: https://github.com/sebw/aap-eda-dynatrace/edit/main/rulebooks/rulebook-webhook.yml
